--- a/sass/responsive.sass
+++ b/sass/responsive.sass
@@ -51,6 +51,24 @@
 
 // For tablets
 @media screen and (min-width: 640px)
+
+  .archive-title
+    text-align: center
+    margin: 50px 20px
+
+  .post-list
+    article.post
+      background-color: white
+      a
+        display: grid
+        grid-template-columns: minmax(15%, 300px) 1fr
+      .image-holder
+        grid-column: 1 / 2
+        margin-bottom: 0px
+      .text-panel
+        grid-column: 2 / 3
+        padding: 20px
+
   header.site-header
     a.bars
       display: none
@@ -80,7 +98,7 @@
   .more-stories
     text-align: center
   main.site-content.home:last-child
-    margin-bottom: 70px    
+    margin-bottom: 70px
   .grid-title
     text-align: center
     position: relative
@@ -89,7 +107,7 @@
     font-size: 2.8em
     border-bottom: 3px solid $red
     display: inline-block
-    margin: 70px auto 50px auto
+    margin: 50px auto 50px auto
   .post-grid
     grid-template-columns: 1fr 1fr 1fr
     &:first-of-type
@@ -97,6 +115,7 @@
     &:nth-of-type(even)
       .post-grid-item:first-of-type
         a
+          background-color: white
           .image-holder
             grid-column: 1 / 3
           span, h2, p
@@ -105,15 +124,22 @@
     .post-grid-item:first-of-type
       grid-column: 1 / 4
       margin-bottom: 0px
+      .text-panel
+        background-color: white
+        padding: 25px
+        z-index: 3
       a
+        background-color: white
         display: grid
         grid-column-gap: 15px
-        grid-template-rows: min-content min-content min-content 1fr
+        grid-template-rows: 1fr
         grid-template-columns: 1fr 1fr 1fr
+        margin-bottom: 15px
         .image-holder
           grid-column: 2 / 4
           grid-row: 1 / 5
           order: -1
+          margin-bottom: 0px
         span, h2, p
           grid-column: 1 /2
           text-align: right
@@ -123,10 +149,17 @@
       flex-direction: column
       align-items: center
       justify-content: flex-start
+      .text-panel
+        margin: -40px 20px 0px 20px
+        padding: 20px
+        background-color: white
+        z-index: 2
+
       .image-holder
         order: -1
     .post-grid-item:nth-of-type(4)
       display: block
+      visibility: visible
 
   section.call-to-action-bar
     padding: 120px 20px
@@ -144,6 +177,25 @@
         &:last-of-type
           margin-right: 0px
 
+  .image-holder.single
+    height: 450px
+    padding-bottom: 0px
+
+  main.single
+    display: grid
+    grid-template-columns: 2fr 1fr
+    article
+      background-color: white
+      margin-top: -80px
+      z-index: 2
+      h1.post-title
+        font-size: 2.5em
+      p
+        font-size: 1.1em
+        line-height: 1.6em
+
+  .related-posts-container
+    margin-bottom: 70px
 
 // For desktops
 @media screen and (min-width: 1040px)
