--- a/sass/main.sass
+++ b/sass/main.sass
@@ -38,6 +38,20 @@ header.site-header
     justify-content: space-between
     align-items: center
     padding: 20px
+  section.search-box
+    padding: 20px
+    background-color: white
+    position: absolute
+    right: -10px
+    top: 30px
+    border: 1px solid #efefef
+    display: none
+    visibility: hidden
+    &.visible
+      display: block
+      visibility: visible
+    form input, form button
+      margin-bottom: 0px
   img
     max-width: 200px
     height: auto
@@ -53,6 +67,19 @@ header.site-header
 .archive-title
   margin: 50px 20px 20px 20px
   font-size: 2.6em
+
+.author-header
+  background-color: white
+  .container
+    padding: 20px
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    align-items: center
+    img
+      border-radius: 100%
+      max-width: 50px
+      max-height: 50px
 
 .post-list
   margin: 0px 20px
@@ -178,6 +205,16 @@ article.post-single
       font-size: 0.8em
       color: $light-grey
       text-align: right
+  .author-box
+    display: flex
+    flex-direction: row
+    img
+      max-width: 70px
+      max-height: 70px
+      border-radius: 100%
+      margin-right: 20px
+    h3
+      margin-bottom: 5px
 
 .popular-posts-list
   margin-top: 20px
@@ -276,6 +313,8 @@ section.call-to-action-bar
   p
     color: $light-grey
     font-weight: 100
+
+form
   input
     padding: 13px
     border-radius: 4px
@@ -286,10 +325,11 @@ section.call-to-action-bar
     color: black
     margin-bottom: 20px
     transform: translateY(2px)
-  button
+  button, input#searchsubmit
     @include Button
     @include LightText
     margin-bottom: 20px
+
 
 // Import media queries
 @import 'Responsive.sass'
